--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:14-alpine
@@ -12,26 +10,57 @@ services:
       - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    networks:
+      - vinylvault-network
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U vinylvault"]
       interval: 5s
       timeout: 5s
       retries: 5
 
-  app:
+  backend:
     build:
-      context: .
+      context: ./vinylvault
       dockerfile: Dockerfile
-    container_name: vinylvault-app
+    container_name: vinylvault-backend
     environment:
       VINYLVAULT_DATABASE_URL: postgres://vinylvault:vinylvault@postgres:5432/vinylvault?sslmode=disable
-      VINYLVAULT_PORT: 8080
+      VINYLVAULT_PORT: 5050
     ports:
-      - "8080:8080"
+      - "5050:5050"
+    depends_on:
+      - db-init
+    networks:
+      - vinylvault-network
+    restart: unless-stopped
+
+  frontend:
+    build:
+      context: ./vinylvault-frontend
+      dockerfile: Dockerfile
+    container_name: vinylvault-frontend
+    ports:
+      - "8080:80"
+    depends_on:
+      - backend
+    networks:
+      - vinylvault-network
+
+  db-init:
+    image: migrate/migrate
+    volumes:
+      - ./vinylvault/internal/db/migrations:/migrations
+    command: ["-path", "/migrations", "-database", "postgres://vinylvault:vinylvault@vinylvault-postgres:5432/vinylvault?sslmode=disable", "up"]
     depends_on:
       postgres:
         condition: service_healthy
-    restart: unless-stopped
+    networks:
+      - vinylvault-network
+    restart: "no"
+
+networks:
+  vinylvault-network:
+    driver: bridge
 
 volumes:
   postgres_data:
